--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       --card-bg: #f9f9f9;
       --toast-bg: rgba(0,0,0,0.8);
     }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * { box-sizing: border-box; margin:0; padding:0; }
     body {
       font-family: Arial, sans-serif;
       background: var(--bg);
@@ -29,133 +29,65 @@
       font-size: 1.5rem;
       font-weight: bold;
     }
-    .container {
-      display: flex;
-      flex: 1;
-      padding: 1rem;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
+    .container { display: flex; flex:1; padding:1rem; gap:1rem; flex-wrap: wrap; }
     .cart, .summary {
       background: var(--card-bg);
       border-radius: 8px;
       padding: 1rem;
       box-shadow: 0 1px 4px rgba(0,0,0,0.1);
     }
-    .cart { flex: 2; }
-    .summary { flex: 1; max-width: 350px; }
+    .cart { flex:2; }
+    .summary { flex:1; max-width: 350px; }
     h2 { margin-bottom: 1rem; }
     .cart-item {
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-      margin-bottom: 1rem;
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      padding: 0.75rem;
+      display: flex; gap:1rem; align-items: center; margin-bottom:1rem;
+      background:#fff; border:1px solid #ddd; border-radius:6px; padding:0.75rem;
     }
     .cart-item img {
-      width: 80px; height: 80px;
-      object-fit: cover;
-      border-radius: 4px;
-      cursor: pointer;
-      border: 1px solid #ccc;
+      width:80px; height:80px; object-fit:cover; border-radius:4px; border:1px solid #ccc;
+      cursor:pointer;
     }
-    .cart-item-details {
-      flex: 1;
-    }
-    .cart-item-details strong {
-      display: block;
-      font-size: 1.1rem;
-    }
-    .cart-item-details small {
-      color: #666;
-    }
+    .cart-item-details { flex:1; }
+    .cart-item-details strong { display:block; font-size:1.1rem; }
+    .cart-item-details small { color:#666; }
     .cart-item-controls {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
+      display:flex; flex-direction:column; align-items:center; gap:0.5rem;
     }
+    .qty-group { display:flex; align-items:center; gap:0.25rem; }
     .qty-btn {
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-      font-size: 1rem;
-      line-height: 1;
+      background: var(--accent); color:#fff; border:none; border-radius:4px;
+      width:24px; height:24px; cursor:pointer; font-size:1rem; line-height:1;
     }
-    .qty-display {
-      width: 30px;
-      text-align: center;
-    }
+    .qty-display { width:30px; text-align:center; }
     .btn-danger {
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 0.4rem 0.8rem;
-      cursor: pointer;
+      background: var(--accent); color:#fff; border:none; border-radius:4px;
+      padding:0.4rem 0.8rem; cursor:pointer; width:100%;
     }
-    button, select, input, textarea {
-      font: inherit;
-    }
+    button, select, input, textarea { font:inherit; }
     .btn {
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 0.6rem 1rem;
-      cursor: pointer;
-      width: 100%;
-      margin-top: 0.5rem;
+      background: var(--accent); color:#fff; border:none; border-radius:4px;
+      padding:0.6rem 1rem; cursor:pointer; width:100%; margin-top:0.5rem;
     }
-    .btn:hover { background: #a00000; }
+    .btn:hover { background:#a00000; }
     .modal {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.85);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
+      display:none; position:fixed; inset:0; background:rgba(0,0,0,0.85);
+      justify-content:center; align-items:center; z-index:1000;
     }
-    .modal img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 6px;
-    }
+    .modal img { max-width:90%; max-height:90%; border-radius:6px; }
     .toast-container {
-      position: fixed;
-      bottom: 1rem; right: 1rem;
-      display: flex; flex-direction: column; gap: 0.5rem;
-      z-index: 1001;
+      position:fixed; bottom:1rem; right:1rem; display:flex; flex-direction:column; gap:0.5rem;
+      z-index:1001;
     }
     .toast {
-      background: var(--toast-bg);
-      color: #fff;
-      padding: 0.75rem 1rem;
-      border-radius: 4px;
-      animation: fadein 0.3s, fadeout 0.3s 2.7s;
+      background: var(--toast-bg); color:#fff; padding:0.75rem 1rem; border-radius:4px;
+      animation:fadein 0.3s, fadeout 0.3s 2.7s;
     }
     @keyframes fadein { from {opacity:0;} to {opacity:1;} }
     @keyframes fadeout { from {opacity:1;} to {opacity:0;} }
-    .summary label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: bold;
-    }
+    .summary label { display:block; margin-top:1rem; font-weight:bold; }
     .summary input, .summary select, .summary textarea {
-      width: 100%;
-      margin-top: 0.25rem;
-      padding: 0.5rem;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      background: #fff;
-      color: #222;
+      width:100%; margin-top:0.25rem; padding:0.5rem; border-radius:4px;
+      border:1px solid #ccc; background:#fff; color:#222;
     }
   </style>
 </head>
@@ -174,8 +106,16 @@
       <label for="coupon">Código Promocional</label>
       <input id="coupon" placeholder="Ej: FIT10">
       <button class="btn" id="apply-coupon">Aplicar</button>
-      <label for="payment">Pago en el Exterior</label>
+      <label for="payment">Método de Pago</label>
       <select id="payment">
+        <optgroup label="Efectivo">
+          <option value="Efectivo USD">Efectivo USD</option>
+          <option value="Efectivo CUP">Efectivo CUP</option>
+        </optgroup>
+        <optgroup label="Transferencia">
+          <option value="Transferencia CUP">Transferencia CUP</option>
+          <option value="Transferencia MLC">Transferencia MLC</option>
+        </optgroup>
         <optgroup label="Pago en el Exterior">
           <option value="Zelle">Zelle</option>
         </optgroup>
@@ -202,17 +142,19 @@
       const c = document.getElementById('cart-items'); c.innerHTML='';
       cart.forEach((i, idx)=>{
         const item = document.createElement('div'); item.className='cart-item';
-        item.innerHTML = `
-          <img src="${i.image}" data-idx="${idx}">
+        item.innerHTML = \`
+          <img src="\${i.image}" data-idx="\${idx}">
           <div class="cart-item-details">
-            <strong>${i.name}</strong><br><small>${i.description}</small><br>$${i.price.toFixed(2)}
+            <strong>\${i.name}</strong><br><small>\${i.description}</small><br>\$ \${i.price.toFixed(2)}
           </div>
           <div class="cart-item-controls">
-            <button class="qty-btn" onclick="changeQty(${idx}, -1)">-</button>
-            <span class="qty-display" id="qty-${idx}">${i.qty}</span>
-            <button class="qty-btn" onclick="changeQty(${idx}, 1)">+</button>
-            <button class="btn-danger" onclick="removeItem(${idx})">Eliminar</button>
-          </div>`;
+            <div class="qty-group">
+              <button class="qty-btn" onclick="changeQty(\${idx}, -1)">-</button>
+              <span class="qty-display" id="qty-\${idx}">\${i.qty}</span>
+              <button class="qty-btn" onclick="changeQty(\${idx}, 1)">+</button>
+            </div>
+            <button class="btn-danger" onclick="removeItem(\${idx})">Eliminar</button>
+          </div>\`;
         c.append(item);
       });
       bindEvents(); updateSummary();
@@ -223,7 +165,7 @@
     function removeItem(idx){ cart.splice(idx,1); save(); render(); showToast('Producto eliminado'); }
     function bindEvents(){
       document.querySelectorAll('.cart-item img').forEach(img=>img.onclick=()=>{
-        const m = document.getElementById('modal'); m.querySelector('img').src = img.src; m.style.display='flex';
+        const m=document.getElementById('modal'); m.querySelector('img').src=img.src; m.style.display='flex';
       });
       document.getElementById('modal').onclick=()=>document.getElementById('modal').style.display='none';
     }
@@ -231,30 +173,29 @@
       const sub = cart.reduce((s,i)=>s+i.price*i.qty,0);
       let disc = 0;
       if(coupon){ disc = coupon.type=='fixed'?coupon.amount:(sub*(coupon.amount/100)); if(disc>sub)disc=sub; }
-      document.getElementById('subtotal').textContent = `$${sub.toFixed(2)}`;
-      document.getElementById('discount').textContent = `-$${disc.toFixed(2)}`;
-      document.getElementById('total').textContent = `$${(sub-disc).toFixed(2)}`;
+      document.getElementById('subtotal').textContent = `\$${sub.toFixed(2)}`;
+      document.getElementById('discount').textContent = `-\$${disc.toFixed(2)}`;
+      document.getElementById('total').textContent = `\$${(sub-disc).toFixed(2)}`;
       save();
     }
     document.getElementById('apply-coupon').onclick=()=>{
-      const code = document.getElementById('coupon').value.trim().toUpperCase();
-      coupon = coupons[code]||null; showToast(coupon?'Cupón aplicado':'Cupón inválido'); updateSummary();
+      const code=document.getElementById('coupon').value.trim().toUpperCase();
+      coupon=coupons[code]||null; showToast(coupon?'Cupón aplicado':'Cupón inválido'); updateSummary();
     };
     document.getElementById('checkout').onclick=()=>{
       if(!cart.length) return showToast('Carrito vacío');
-      const method = document.getElementById('payment').value;
-      const name = document.getElementById('cliente-nombre').value;
-      const phone = document.getElementById('cliente-telefono').value;
-      const addr = document.getElementById('cliente-direccion').value;
-      const note = encodeURIComponent(document.getElementById('note').value);
-      const items = cart.map(i=>`${i.name} x${i.qty}`).join('%0A');
-      const total = document.getElementById('total').textContent;
-      const msg = `*Pedido FitZone*%0A${items}%0A%0ATotal: ${total}%0APago: ${method}%0ANombre: ${name}%0ATeléfono: ${phone}%0ADirección: ${addr}%0A${note}`;
-      window.open('https://wa.me/5353264753?text='+encodeURIComponent(msg), '_blank');
-      showToast('Abriendo WhatsApp...');
+      const method=document.getElementById('payment').value;
+      const name=document.getElementById('cliente-nombre').value;
+      const phone=document.getElementById('cliente-telefono').value;
+      const addr=document.getElementById('cliente-direccion').value;
+      const note=encodeURIComponent(document.getElementById('note').value);
+      const items=cart.map(i=>\`\${i.name} x\${i.qty}\`).join('%0A');
+      const total=document.getElementById('total').textContent;
+      const msg=\`*Pedido FitZone*%0A\${items}%0A%0ATotal: \${total}%0APago: \${method}%0ANombre: \${name}%0ATeléfono: \${phone}%0ADirección: \${addr}%0A\${note}\`;
+      window.open('https://wa.me/5353264753?text='+encodeURIComponent(msg), '_blank'); showToast('Abriendo WhatsApp...');
     };
     (function(){
-      const p = new URLSearchParams(window.location.search);
+      const p=new URLSearchParams(window.location.search);
       if(p.has('producto')){
         cart.push({ name:p.get('producto'), price:parseFloat(p.get('precio'))||0, image:p.get('imagen')||'', description:p.get('descripcion')||'', qty:1 });
         save(); render(); showToast('Producto añadido');
