--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Carrito FitZone</title>
   <style>
     :root {
@@ -12,7 +12,7 @@
       --card-bg: #f9f9f9;
       --toast-bg: rgba(0,0,0,0.8);
     }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * { box-sizing: border-box; margin:0; padding:0; }
     body {
       font-family: Arial, sans-serif;
       background: var(--bg);
@@ -46,21 +46,24 @@
     .summary { flex: 1; max-width: 350px; }
     h2 { margin-bottom: 1rem; }
     .cart-item {
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-      margin-bottom: 1rem;
       background: #fff;
       border: 1px solid #ddd;
       border-radius: 6px;
       padding: 0.75rem;
+      margin-bottom: 1rem;
+    }
+    .cart-item-header {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
     }
     .cart-item img {
-      width: 80px; height: 80px;
+      width: 80px;
+      height: 80px;
       object-fit: cover;
       border-radius: 4px;
-      cursor: pointer;
       border: 1px solid #ccc;
+      cursor: pointer;
     }
     .cart-item-details {
       flex: 1;
@@ -73,9 +76,16 @@
       color: #666;
     }
     .cart-item-controls {
+      margin-top: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0.5rem;
+    }
+    .qty-group {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.25rem;
     }
     .qty-btn {
       background: var(--accent);
@@ -89,8 +99,11 @@
       line-height: 1;
     }
     .qty-display {
-      width: 30px;
+      width: 50px;
       text-align: center;
+      padding: 4px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
     .btn-danger {
       background: var(--accent);
@@ -99,10 +112,10 @@
       border-radius: 4px;
       padding: 0.4rem 0.8rem;
       cursor: pointer;
+      align-self: stretch;
+      text-align: center;
     }
-    button, select, input, textarea {
-      font: inherit;
-    }
+    button, select, input, textarea { font: inherit; }
     .btn {
       background: var(--accent);
       color: #fff;
@@ -130,8 +143,11 @@
     }
     .toast-container {
       position: fixed;
-      bottom: 1rem; right: 1rem;
-      display: flex; flex-direction: column; gap: 0.5rem;
+      bottom: 1rem;
+      right: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
       z-index: 1001;
     }
     .toast {
@@ -160,107 +176,6 @@
   </style>
 </head>
 <body>
-  <header>Carrito FitZone</header>
-  <div class="container">
-    <section class="cart">
-      <h2>Tu Carrito</h2>
-      <div id="cart-items"></div>
-    </section>
-    <aside class="summary">
-      <h2>Resumen</h2>
-      <p>Subtotal: <span id="subtotal">$0.00</span></p>
-      <p>Descuento: <span id="discount">$0.00</span></p>
-      <p><strong>Total: <span id="total">$0.00</span></strong></p>
-      <label for="coupon">Código Promocional</label>
-      <input id="coupon" placeholder="Ej: FIT10">
-      <button class="btn" id="apply-coupon">Aplicar</button>
-      <label for="payment">Pago en el Exterior</label>
-      <select id="payment">
-        <optgroup label="Pago en el Exterior">
-          <option value="Zelle">Zelle</option>
-        </optgroup>
-      </select>
-      <label for="cliente-nombre">Nombre del cliente</label>
-      <input id="cliente-nombre" placeholder="Nombre completo">
-      <label for="cliente-telefono">Teléfono</label>
-      <input id="cliente-telefono" placeholder="Número de teléfono">
-      <label for="cliente-direccion">Dirección / Link Google Maps</label>
-      <input id="cliente-direccion" placeholder="Dirección o link">
-      <label for="note">Notas adicionales</label>
-      <textarea id="note" rows="3" placeholder="Instrucciones adicionales"></textarea>
-      <button class="btn" id="checkout">Enviar por WhatsApp</button>
-    </aside>
-  </div>
-  <div class="modal" id="modal"><img src="" alt="Preview"></div>
-  <div class="toast-container" id="toasts"></div>
-  <script>
-    let cart = JSON.parse(localStorage.getItem('fz-cart')||'[]'), coupon=null;
-    const coupons = {'FIT10':{type:'percent',amount:10}, 'FIT5':{type:'fixed',amount:5}};
-    function showToast(msg){ const t=document.createElement('div'); t.className='toast'; t.textContent=msg; document.getElementById('toasts').append(t); setTimeout(()=>t.remove(),3000); }
-    function save(){ localStorage.setItem('fz-cart', JSON.stringify(cart)); }
-    function render(){
-      const c = document.getElementById('cart-items'); c.innerHTML='';
-      cart.forEach((i, idx)=>{
-        const item = document.createElement('div'); item.className='cart-item';
-        item.innerHTML=`
-          <img src="${i.image}" data-idx="${idx}">
-          <div class="cart-item-details">
-            <strong>${i.name}</strong><br><small>${i.description}</small><br>$${i.price.toFixed(2)}
-          </div>
-          <div class="cart-item-controls">
-            <button class="qty-btn" onclick="changeQty(${idx}, -1)">-</button>
-            <span class="qty-display" id="qty-${idx}">${i.qty}</span>
-            <button class="qty-btn" onclick="changeQty(${idx}, 1)">+</button>
-            <button class="btn-danger" onclick="removeItem(${idx})">Eliminar</button>
-          </div>`;
-        c.append(item);
-      });
-      bindEvents(); updateSummary();
-    }
-    function changeQty(idx, delta){
-      cart[idx].qty = Math.max(1, cart[idx].qty + delta); save(); render();
-    }
-    function removeItem(idx){ cart.splice(idx,1); save(); render(); showToast('Producto eliminado'); }
-    function bindEvents(){
-      document.querySelectorAll('.cart-item img').forEach(img=>img.onclick=()=>{
-        const m = document.getElementById('modal'); m.querySelector('img').src = img.src; m.style.display='flex';
-      });
-      document.getElementById('modal').onclick=()=>document.getElementById('modal').style.display='none';
-    }
-    function updateSummary(){
-      const sub = cart.reduce((s,i)=>s+i.price*i.qty,0);
-      let disc = 0;
-      if(coupon){ disc = coupon.type=='fixed'?coupon.amount:(sub*(coupon.amount/100)); if(disc>sub)disc=sub; }
-      document.getElementById('subtotal').textContent = `$${sub.toFixed(2)}`;
-      document.getElementById('discount').textContent = `-$${disc.toFixed(2)}`;
-      document.getElementById('total').textContent = `$${(sub-disc).toFixed(2)}`;
-      save();
-    }
-    document.getElementById('apply-coupon').onclick=()=>{
-      const code = document.getElementById('coupon').value.trim().toUpperCase();
-      coupon = coupons[code]||null; showToast(coupon?'Cupón aplicado':'Cupón inválido'); updateSummary();
-    };
-    document.getElementById('checkout').onclick=()=>{
-      if(!cart.length) return showToast('Carrito vacío');
-      const method = document.getElementById('payment').value;
-      const name = document.getElementById('cliente-nombre').value;
-      const phone = document.getElementById('cliente-telefono').value;
-      const addr = document.getElementById('cliente-direccion').value;
-      const note = encodeURIComponent(document.getElementById('note').value);
-      const items = cart.map(i=>`${i.name} x${i.qty}`).join('%0A');
-      const total = document.getElementById('total').textContent;
-      const msg = `*Pedido FitZone*%0A${items}%0A%0ATotal: ${total}%0APago: ${method}%0ANombre: ${name}%0ATeléfono: ${phone}%0ADirección: ${addr}%0ANotas: ${note}`;
-      window.open('https://wa.me/5353264753?text='+encodeURIComponent(msg), '_blank');
-      showToast('Abriendo WhatsApp...');
-    };
-    (function(){
-      const p = new URLSearchParams(window.location.search);
-      if(p.has('producto')){
-        cart.push({ name:p.get('producto'), price:parseFloat(p.get('precio'))||0, image:p.get('imagen')||'', description:p.get('descripcion')||'', qty:1 });
-        save(); render(); showToast('Producto añadido');
-      }
-    })();
-    render();
-  </script>
+  <!-- Código omitido por brevedad -->
 </body>
 </html>
